bad/field_access_non_class_type_int.example_compiler_output
ERROR
[1mbad/field_access_non_class_type_int.lat:3:4: [1;31merror: [0;1mtype `int` has no fields[m
	42.size;
	  [1;32m^[m
